--- a/hw2/first.ipynb
+++ b/hw2/first.ipynb
@@ -405,9 +405,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iter</th>\n",
+       "      <th>log_ll</th>\n",
+       "      <th>Kendall_corr</th>\n",
+       "      <th>Spearman_corr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.570342</td>\n",
+       "      <td>0.580205</td>\n",
+       "      <td>0.735686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.421324</td>\n",
+       "      <td>0.589948</td>\n",
+       "      <td>0.746765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.355249</td>\n",
+       "      <td>0.591595</td>\n",
+       "      <td>0.747636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.331625</td>\n",
+       "      <td>0.587803</td>\n",
+       "      <td>0.743784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.323231</td>\n",
+       "      <td>0.586202</td>\n",
+       "      <td>0.741593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-0.320162</td>\n",
+       "      <td>0.584348</td>\n",
+       "      <td>0.739779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>-0.318998</td>\n",
+       "      <td>0.583620</td>\n",
+       "      <td>0.738872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>-0.318538</td>\n",
+       "      <td>0.583471</td>\n",
+       "      <td>0.738921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>-0.318352</td>\n",
+       "      <td>0.583371</td>\n",
+       "      <td>0.738919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>-0.318276</td>\n",
+       "      <td>0.583364</td>\n",
+       "      <td>0.738748</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  iter    log_ll  Kendall_corr  Spearman_corr\n",
+       "0    1 -0.570342      0.580205       0.735686\n",
+       "1    2 -0.421324      0.589948       0.746765\n",
+       "2    3 -0.355249      0.591595       0.747636\n",
+       "3    4 -0.331625      0.587803       0.743784\n",
+       "4    5 -0.323231      0.586202       0.741593\n",
+       "5    6 -0.320162      0.584348       0.739779\n",
+       "6    7 -0.318998      0.583620       0.738872\n",
+       "7    8 -0.318538      0.583471       0.738921\n",
+       "8    9 -0.318352      0.583371       0.738919\n",
+       "9   10 -0.318276      0.583364       0.738748"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "weights = np.random.rand(pq_df_oh.shape[1])\n",
     "em_df = pd.DataFrame(columns=['iter', 'log_ll', 'Kendall_corr', 'Spearman_corr'])\n",
@@ -431,12 +551,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Рейтинг лист турниров по сложности вопросов"
+    "### Рейтинг лист турниров по сложности вопросов\n",
+    "\n",
+    "EZ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,19 +580,369 @@
     "        'name': names,\n",
     "        'diff': diffs\n",
     "    }).sort_values(by='diff')\n",
-    "    tournaments_diff_rating['place'] = tournamets_diff_rating.reset_index().index + 1\n",
+    "    tournaments_diff_rating['place'] = tournaments_diff_rating.reset_index().index + 1\n",
     "    tournaments_diff_rating = tournaments_diff_rating[['name', 'place']].set_index('place')\n",
     "    return tournaments_diff_rating"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>place</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Чемпионат Санкт-Петербурга. Первая лига</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Угрюмый Ёрш</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Первенство правого полушария</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Чемпионат Мира. Этап 2 Группа С</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Воображаемый музей</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Чемпионат Мира. Финал. Группа С</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Записки охотника</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Чемпионат Мира. Этап 3. Группа С</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Чемпионат Санкт-Петербурга. Высшая лига</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Ускользающая сова</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Чемпионат Мира. Этап 2. Группа В</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Чемпионат Мира. Этап 1. Группа С</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Чемпионат Минска. Лига А. Тур четвёртый</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Чемпионат России</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Кубок городов</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Чемпионат Мира. Этап 3. Группа В</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Зеркало мемориала памяти Михаила Басса</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Знание – Сила VI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Серия Гран-при. Общий зачёт</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Чемпионат Мира. Этап 1. Группа В</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>VERSUS: Коробейников vs. Матвеев</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Чемпионат Мира. Этап 2. Группа А</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Львов зимой. Адвокат</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Мемориал Дмитрия Коноваленко</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Серия Premier. Седьмая печать</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          name\n",
+       "place                                         \n",
+       "1      Чемпионат Санкт-Петербурга. Первая лига\n",
+       "2                                  Угрюмый Ёрш\n",
+       "3                 Первенство правого полушария\n",
+       "4              Чемпионат Мира. Этап 2 Группа С\n",
+       "5                           Воображаемый музей\n",
+       "6              Чемпионат Мира. Финал. Группа С\n",
+       "7                             Записки охотника\n",
+       "8             Чемпионат Мира. Этап 3. Группа С\n",
+       "9      Чемпионат Санкт-Петербурга. Высшая лига\n",
+       "10                           Ускользающая сова\n",
+       "11            Чемпионат Мира. Этап 2. Группа В\n",
+       "12            Чемпионат Мира. Этап 1. Группа С\n",
+       "13     Чемпионат Минска. Лига А. Тур четвёртый\n",
+       "14                            Чемпионат России\n",
+       "15                               Кубок городов\n",
+       "16            Чемпионат Мира. Этап 3. Группа В\n",
+       "17      Зеркало мемориала памяти Михаила Басса\n",
+       "18                            Знание – Сила VI\n",
+       "19                 Серия Гран-при. Общий зачёт\n",
+       "20            Чемпионат Мира. Этап 1. Группа В\n",
+       "21            VERSUS: Коробейников vs. Матвеев\n",
+       "22            Чемпионат Мира. Этап 2. Группа А\n",
+       "23                        Львов зимой. Адвокат\n",
+       "24                Мемориал Дмитрия Коноваленко\n",
+       "25               Серия Premier. Седьмая печать"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "get_tournaments_difficult_rating(clf.coef_[0], pq_df, encoder).head(25)"
+    "rating = get_tournaments_difficult_rating(weights, pq_df, encoder()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>place</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>592</th>\n",
+       "      <td>Открытый кубок УМЭД</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>593</th>\n",
+       "      <td>Большая перемена</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>594</th>\n",
+       "      <td>Школьный Синхрон-lite. Выпуск 3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>595</th>\n",
+       "      <td>Парный асинхронный турнир ChGK is...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>Кубок княгини Ольги среди школьников</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод VI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>598</th>\n",
+       "      <td>Лига вузов. IV тур</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>Чемпионат МГУ. Открытая лига. Первый игровой день</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>600</th>\n",
+       "      <td>Школьный Синхрон-lite. Выпуск 2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>Школьный Синхрон-lite. Выпуск 3.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>Школьная лига. II тур.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод IV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>Межфакультетский кубок МГУ. Отбор №4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>605</th>\n",
+       "      <td>Школьный Синхрон-lite. Выпуск 3.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>606</th>\n",
+       "      <td>Второй тематический турнир имени Джоуи Триббиани</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>608</th>\n",
+       "      <td>Студенческий чемпионат Калининградской области</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>Школьная лига. I тур.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод III</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод IX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612</th>\n",
+       "      <td>Школьная лига. III тур.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>Школьный Синхрон-lite. Выпуск 2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод VII</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>615</th>\n",
+       "      <td>(а)Синхрон-lite. Лига старта. Эпизод V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>616</th>\n",
+       "      <td>One ring - async</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    name\n",
+       "place                                                   \n",
+       "592                                  Открытый кубок УМЭД\n",
+       "593                                     Большая перемена\n",
+       "594                    Школьный Синхрон-lite. Выпуск 3.4\n",
+       "595                 Парный асинхронный турнир ChGK is...\n",
+       "596                 Кубок княгини Ольги среди школьников\n",
+       "597              (а)Синхрон-lite. Лига старта. Эпизод VI\n",
+       "598                                   Лига вузов. IV тур\n",
+       "599    Чемпионат МГУ. Открытая лига. Первый игровой день\n",
+       "600                    Школьный Синхрон-lite. Выпуск 2.3\n",
+       "601                    Школьный Синхрон-lite. Выпуск 3.3\n",
+       "602                               Школьная лига. II тур.\n",
+       "603              (а)Синхрон-lite. Лига старта. Эпизод IV\n",
+       "604                 Межфакультетский кубок МГУ. Отбор №4\n",
+       "605                    Школьный Синхрон-lite. Выпуск 3.1\n",
+       "606     Второй тематический турнир имени Джоуи Триббиани\n",
+       "607               (а)Синхрон-lite. Лига старта. Эпизод X\n",
+       "608       Студенческий чемпионат Калининградской области\n",
+       "609                                Школьная лига. I тур.\n",
+       "610             (а)Синхрон-lite. Лига старта. Эпизод III\n",
+       "611              (а)Синхрон-lite. Лига старта. Эпизод IX\n",
+       "612                              Школьная лига. III тур.\n",
+       "613                    Школьный Синхрон-lite. Выпуск 2.5\n",
+       "614             (а)Синхрон-lite. Лига старта. Эпизод VII\n",
+       "615               (а)Синхрон-lite. Лига старта. Эпизод V\n",
+       "616                                     One ring - async"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_tournaments_difficult_rating(weights, pq_df, encoder).tail(25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
