--- a/hw2/first.ipynb
+++ b/hw2/first.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -753,18 +753,19 @@
        "25               Серия Premier. Седьмая печать"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rating = get_tournaments_difficult_rating(weights, pq_df, encoder()"
+    "rating_tournaments = get_tournaments_difficult_rating(weights, pq_df, encoder)\n",
+    "rating_tournaments.head(25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -930,19 +931,21 @@
        "616                                     One ring - async"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_tournaments_difficult_rating(weights, pq_df, encoder).tail(25)"
+    "rating_tournaments.tail(25)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Как видно, всякие школьные и несерьезные турниры попадают в конец рейтинга, а Чемпионаты мира и турниры Первой лиги в начало"
+   ]
   }
  ],
  "metadata": {
