--- a/hw3/08-hmm.ipynb
+++ b/hw3/08-hmm.ipynb
@@ -393,10 +393,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -700,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
