--- a/hw3/sherlock.ipynb
+++ b/hw3/sherlock.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encode_text(text, cipher):\n",
+    "def encrypt_text(text, cipher):\n",
     "    return ''.join(cipher[ch] for ch in text)"
    ]
   },
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decode_text(text, solution):\n",
+    "def decrypt_text(text, solution):\n",
     "    return ''.join(solution[ch] for ch in text)"
    ]
   },
@@ -192,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def accuracy_score(decoded_text, orig_text):\n",
-    "    return (np.array(list(decoded_text)) == np.array(list(orig_text))).sum() / len(decoded_text)"
+    "def accuracy_score(decrypted_text, orig_text):\n",
+    "    return (np.array(list(decrypted_text)) == np.array(list(orig_text))).sum() / len(decrypted_text)"
    ]
   },
   {
@@ -229,14 +229,14 @@
      "output_type": "stream",
      "text": [
       "Исходный текст: 'а как же серсо',\n",
-      "Зашифрованный '👸👭🕺👸🕺👭💂🦹👭🧕🦹👼🧕🙋'\n"
+      "Зашифрованный '👸🧙🧖👸🧖🧙🧝🧜🧙🙅🧜👯🙅🙇'\n"
      ]
     }
    ],
    "source": [
     "text = 'а как же серсо'\n",
-    "encoded_text = encode_text(text, emoji_cipher)\n",
-    "decoded_text = decode_text(encoded_text, solution)\n",
+    "encrypted_text = encode_text(text, emoji_cipher)\n",
+    "decrypted_text = decode_text(encoded_text, solution)\n",
     "print(f'Исходный текст: {repr(text)},\\nЗашифрованный {repr(encoded_text)}')"
    ]
   },
@@ -249,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Исходный зашифрованный текст: '👸👭🕺👸🕺👭💂🦹👭🧕🦹👼🧕🙋',\n",
+      "Исходный зашифрованный текст: '👸🧙🧖👸🧖🧙🧝🧜🧙🙅🧜👯🙅🙇',\n",
       "Расшифрованный 'а как же серсо'\n"
      ]
     }
@@ -291,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "👸💃💃👸👭🕺👸👼🦹💃🤦💃👸👭🙋🚶🤦💃👭🤦🕴👭🧕👸🙅🧖🎅👭🕴💃👸🙅🦹💃🤦👯🧖🎅👭👼🙋🙅👸💃🙋🧙👭💁🧛🧙👸👭👯🙋💁🧕👯🙋🤴🙋👭💃👸🧟🤦💃👸🦹👯🧕👰👭🧕👯👸🧙🦸🦹🧚👭👸🧝🙋👼🤦🕴🙅🙋🙅👭🧝👼👸🕴🙋🧚👭🧙🧕🦹👭🧕🧟👸🧕👯💁🤦🧙🧖🦹👭🧕🦹🙅🧛🤦👭🧜🙋🎅🙋💂🤦👭🚶👼🧞🤴👭💃👸👭🚶👼🧞🤴👸👭🕺👸💂🚶👸👰👭💃🦹🧕🧟👸🧕👯💁🤦🧙👸👰👭🧕🦹🙅🧛👰👭💃🦹🧕🧟👸🧕👯💁🤦🧙👸👭🧜🙋👭🧕🧙🙋🦹🙅🧞👭👮👯🙋👭🕺💃🤦🤴👸👭🙋👭🧙🦹🧟💃🧖🎅👭🤷🦹💃💃🙋🧕👯👰🎅👭🙋👭💁🙇👨🧙🤦👭🙋👭🧙🦹👼🦹👭🙋👭🧕🦹🙅🧛🦹👭🙋👭🧟🦹💁🙋🧙🦹🧟🦹🧕🕺🙋🙅👭🚶🙋🧕👯🙋🤦💃🧕👯🧙🦹👭💁🦹🧙👭👯🙋💁🧕👯🙋🧚👼🙋🙅👸💃👭🦸🤦👼🙋🕺🙋🤴🙋👭🚶🧖🎅👸💃🤦👰👭🧟👸🧕👯🧛👭🧜🦹👼🧙👸👰👭💁🦹🧙👭👯🙋💁🧕👯🙋🧚👭👸💃💃👸👭🕺👸👼🦹💃🤦💃👸👭👼🙋🙅👸💃👭🦸🤦👼🙋🕺🙋🤴🙋👭🚶🧖🎅👸💃🤦👰👭👸💃💃👸👭🕺👸👼🦹💃🤦💃👸👭🧜🙋👼👸🕴🤦💁👸👭🧕🙋🧙👼🦹🙅🦹💃💃🤦🕺🙋🧙👭🧙🧕🦹🚶💃🦹🧙💃🙋🧕👯🧛🙇👭🧕🙋🚶🦹👼💂👸💃🤦👰👭💃🦹🙋👨🧖🧟👸🧚💃👸👰👭🧕🧙🙋👨🙋🚶👸👭👼👸🧕🕺🙋🧙👸💃💃🙋🧕👯🧛👭🧜🙋🧙🦹🧕👯🧙🙋🧙👸💃🤦👰👭🧞🚶🤦🧙🤦👯🦹💁🧛💃🙋👭🧕🙋🧟🦹👯👸💁🤦🧕🧛👭🧙👭👮👯🙋\n"
+      "👸🕴🕴👸🧙🧖👸👯🧜🕴🧕🕴👸🧙🙇🙋🧕🕴🧙🧕🧟🧙🙅👸🦹💃👮🧙🧟🕴👸🦹🧜🕴🧕🚶💃👮🧙👯🙇🦹👸🕴🙇💂🧙🧚👭💂👸🧙🚶🙇🧚🙅🚶🙇🤴🙇🧙🕴👸🧛🧕🕴👸🧜🚶🙅💁🧙🙅🚶👸💂👨🧜🦸🧙👸👰🙇👯🧕🧟🦹🙇🦹🧙👰👯👸🧟🙇🦸🧙💂🙅🧜🧙🙅🧛👸🙅🚶🧚🧕💂💃🧜🧙🙅🧜🦹👭🧕🧙🤦🙇👮🙇🧝🧕🧙🙋👯🤷🤴🧙🕴👸🧙🙋👯🤷🤴👸🧙🧖👸🧝🙋👸💁🧙🕴🧜🙅🧛👸🙅🚶🧚🧕💂👸💁🧙🙅🧜🦹👭💁🧙🕴🧜🙅🧛👸🙅🚶🧚🧕💂👸🧙🤦🙇🧙🙅💂🙇🧜🦹🤷🧙🤰🚶🙇🧙🧖🕴🧕🤴👸🧙🙇🧙💂🧜🧛🕴💃👮🧙🧞🧜🕴🕴🙇🙅🚶💁👮🧙🙇🧙🧚🎅👼💂🧕🧙🙇🧙💂🧜👯🧜🧙🙇🧙🙅🧜🦹👭🧜🧙🙇🧙🧛🧜🧚🙇💂🧜🧛🧜🙅🧖🙇🦹🧙🙋🙇🙅🚶🙇🧕🕴🙅🚶💂🧜🧙🧚🧜💂🧙🚶🙇🧚🙅🚶🙇🦸👯🙇🦹👸🕴🧙👨🧕👯🙇🧖🙇🤴🙇🧙🙋💃👮👸🕴🧕💁🧙🧛👸🙅🚶👭🧙🤦🧜👯💂👸💁🧙🧚🧜💂🧙🚶🙇🧚🙅🚶🙇🦸🧙👸🕴🕴👸🧙🧖👸👯🧜🕴🧕🕴👸🧙👯🙇🦹👸🕴🧙👨🧕👯🙇🧖🙇🤴🙇🧙🙋💃👮👸🕴🧕💁🧙👸🕴🕴👸🧙🧖👸👯🧜🕴🧕🕴👸🧙🤦🙇👯👸🧟🧕🧚👸🧙🙅🙇💂👯🧜🦹🧜🕴🕴🧕🧖🙇💂🧙💂🙅🧜🙋🕴🧜💂🕴🙇🙅🚶👭🎅🧙🙅🙇🙋🧜👯🧝👸🕴🧕💁🧙🕴🧜🙇👼💃🧛👸🦸🕴👸💁🧙🙅💂🙇👼🙇🙋👸🧙👯👸🙅🧖🙇💂👸🕴🕴🙇🙅🚶👭🧙🤦🙇💂🧜🙅🚶💂🙇💂👸🕴🧕💁🧙🤷🙋🧕💂🧕🚶🧜🧚👭🕴🙇🧙🙅🙇🧛🧜🚶👸🧚🧕🙅👭🧙💂🧙🤰🚶🙇\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "873d130bccad4c0cb6fda11a10af0b7c",
+       "model_id": "2da9d1fee0c84685888a7ead9b001774",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f16edd14370>]"
+       "[<matplotlib.lines.Line2D at 0x7f61b5cae4c0>]"
       ]
      },
      "execution_count": 19,
@@ -530,7 +530,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53b20845150b4f8c8184176f20dd12fd",
+       "model_id": "9a3f0eff890e4fbcaa80fb1e3ac8195f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,7 +544,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f16ed0ead90>]"
+       "[<matplotlib.lines.Line2D at 0x7f61b6e1a310>]"
       ]
      },
      "execution_count": 21,
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -705,13 +705,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f6e46cb13934b98ae001774993e5960",
+       "model_id": "f26f218fae2b403488e1aabab887ca84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -725,10 +725,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f1637d613d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f61b6ae2dc0>]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -754,6 +754,246 @@
     "fig = plt.figure(figsize=(10, 6))\n",
     "ax = fig.add_subplot(111)\n",
     "ax.plot(lens, accuracies, label=\"Точность расшифровки\", linewidth=1.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NotHiddenMM:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def fit(self, sequence):\n",
+    "        self.transmat_ = np.zeros([len(set(sequence))] * 2)\n",
+    "        self.startprob = np.zeros(len(set(sequence)))\n",
+    "        self.startprob[sequence[0]] = 1\n",
+    "        transcount = len(sequence) - 1\n",
+    "        for i in range(1, len(sequence)):\n",
+    "            self.transmat_[sequence[i - 1], sequence[i]] += 1\n",
+    "        self.transmat_ /= transcount\n",
+    "        \n",
+    "    def get_log_likelihood(self, sequence):\n",
+    "        log_likelihood = 0\n",
+    "        for i in range(1, len(sequence)):\n",
+    "            log_likelihood += np.log(self.transmat_[sequence[i - 1], sequence[i]])\n",
+    "        return log_likelihood / len(sequence)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "log(Пp(i, j)) = \\sum (log(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ru_alphabet_coding = {ch: ind for ind, ch in enumerate(sorted(ru_alphabet))}\n",
+    "def get_indexed_sequence(sequence, alphabet_coding=ru_alphabet_coding):\n",
+    "    return [alphabet_coding[ch] for ch in sequence]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_hmm = NotHiddenMM()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_hmm.fit(get_indexed_sequence(anna_karenina_cleaned))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01699247898625474"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def metropolis_hastings_check(markov_model, permutation):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialHMM(n_components=3,\n",
+       "               random_state=RandomState(MT19937) at 0x7F61D37C3140)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hmm_model.fit(list(combinations_with_replacement([1, 2, 3], 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m\n",
+       "\u001b[0mhmmlearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhmm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMultinomialHMM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mn_components\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mstartprob_prior\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mtransmat_prior\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0malgorithm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'viterbi'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mn_iter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ste'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0minit_params\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ste'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "Hidden Markov Model with multinomial (discrete) emissions.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "\n",
+       "n_components : int\n",
+       "    Number of states.\n",
+       "\n",
+       "startprob_prior : array, shape (n_components, ), optional\n",
+       "    Parameters of the Dirichlet prior distribution for\n",
+       "    :attr:`startprob_`.\n",
+       "\n",
+       "transmat_prior : array, shape (n_components, n_components), optional\n",
+       "    Parameters of the Dirichlet prior distribution for each row\n",
+       "    of the transition probabilities :attr:`transmat_`.\n",
+       "\n",
+       "algorithm : string, optional\n",
+       "    Decoder algorithm. Must be one of \"viterbi\" or \"map\".\n",
+       "    Defaults to \"viterbi\".\n",
+       "\n",
+       "random_state: RandomState or an int seed, optional\n",
+       "    A random number generator instance.\n",
+       "\n",
+       "n_iter : int, optional\n",
+       "    Maximum number of iterations to perform.\n",
+       "\n",
+       "tol : float, optional\n",
+       "    Convergence threshold. EM will stop if the gain in log-likelihood\n",
+       "    is below this value.\n",
+       "\n",
+       "verbose : bool, optional\n",
+       "    When ``True`` per-iteration convergence reports are printed\n",
+       "    to :data:`sys.stderr`. You can diagnose convergence via the\n",
+       "    :attr:`monitor_` attribute.\n",
+       "\n",
+       "params : string, optional\n",
+       "    Controls which parameters are updated in the training\n",
+       "    process.  Can contain any combination of 's' for startprob,\n",
+       "    't' for transmat, 'e' for emissionprob.\n",
+       "    Defaults to all parameters.\n",
+       "\n",
+       "init_params : string, optional\n",
+       "    Controls which parameters are initialized prior to\n",
+       "    training.  Can contain any combination of 's' for\n",
+       "    startprob, 't' for transmat, 'e' for emissionprob.\n",
+       "    Defaults to all parameters.\n",
+       "\n",
+       "Attributes\n",
+       "----------\n",
+       "n_features : int\n",
+       "    Number of possible symbols emitted by the model (in the samples).\n",
+       "\n",
+       "monitor\\_ : ConvergenceMonitor\n",
+       "    Monitor object used to check the convergence of EM.\n",
+       "\n",
+       "startprob\\_ : array, shape (n_components, )\n",
+       "    Initial state occupation distribution.\n",
+       "\n",
+       "transmat\\_ : array, shape (n_components, n_components)\n",
+       "    Matrix of transition probabilities between states.\n",
+       "\n",
+       "emissionprob\\_ : array, shape (n_components, n_features)\n",
+       "    Probability of emitting a given symbol when in each state.\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       ">>> from hmmlearn.hmm import MultinomialHMM\n",
+       ">>> MultinomialHMM(n_components=2)  #doctest: +ELLIPSIS\n",
+       "MultinomialHMM(algorithm='viterbi',...\n",
+       "\u001b[0;31mFile:\u001b[0m           ~/anaconda3/lib/python3.8/site-packages/hmmlearn/hmm.py\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hmmlearn.hmm.MultinomialHMM?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations_with_replacement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.55708988, 0.39169677, 0.05121336],\n",
+       "       [0.37140368, 0.43290551, 0.19569081],\n",
+       "       [0.01139247, 0.04763581, 0.94097172]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hmm_model.transmat_"
    ]
   },
   {
