--- a/blackjack-rl/blackjack-rl.ipynb
+++ b/blackjack-rl/blackjack-rl.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "30876f02-5eb7-4167-9e34-6f245976393e",
    "metadata": {},
    "outputs": [],
@@ -86,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "acdc37c9-82d1-41af-bca3-d31b604d1318",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(13, 5, False)"
+       "(20, 10, False)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a006c89b-e027-421f-8690-c79658475e40",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((23, 5, False), -1.0, True, {})"
+       "((26, 10, False), -1.0, True, {})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,17 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5c54db80-e4c2-46e0-8dfd-31351bc9766f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((32, 5, False), -1.0, True, {})"
+       "((36, 10, False), -1.0, True, {})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "c36df531-4f4c-4317-b0ba-a3efe66e06d8",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "8bbc5fd1-32c9-446d-8de5-c7b62b6e2034",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 61,
    "id": "bdd0c141-c992-4573-8b83-0186cea90396",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 62,
    "id": "1662928d-2c24-4a8d-b23e-4812f079b0da",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "9cfebe44",
    "metadata": {},
    "outputs": [
@@ -329,8 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(((19, 9, False), 0.0, False, {}), None),\n",
-      " (((19, 9, False), -1.0, True, {}), 0)]\n"
+      "[(((12, 5, False), 0.0, False, {}), None),\n",
+      " (((22, 5, False), -1.0, True, {}), 1)]\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 24,
    "id": "594311c3-f5e9-45ca-8dfa-d80e0c09698e",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
     "        self.action_dim = action_dim\n",
     "    \n",
     "    def update_q(self, episode_history):\n",
-    "        prob_greedy_action = 1 - self.eps # ?\n",
+    "        prob_greedy_action = 1 - (self.action_dim - 1) * self.eps / self.action_dim # Damn?\n",
     "        if not self.training:\n",
     "            raise ValueError('Player must be in training mode for updating Q. Use player.set_training()')\n",
     "        else:\n",
@@ -409,7 +409,7 @@
     "        if coin > self.eps:\n",
     "            return self.greedy_step(previous_state)\n",
     "        else:\n",
-    "            return np.random.randint()\n",
+    "            return np.random.randint(self.action_dim)\n",
     "    \n",
     "    def strategy(self, previous_state):\n",
     "        if self.training:\n",
@@ -420,73 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "id": "241642cf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cool_player = OffPolicySoftGreedyMCControlPlayer(2)\n",
-    "state = env.reset()\n",
-    "cool_player.greedy_step(state)"
+    "state = env.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "12975d26",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0.])"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cool_player.q[state]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "bcf691f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('a', 5)"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = {'a': 2, 'a': 5, 'b': 4}\n",
-    "max(list(a.items()), key=lambda item: item[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "b0927373",
    "metadata": {},
    "outputs": [],
@@ -498,29 +443,81 @@
     "    def train(self, player, game, n_iter, callback=None):\n",
     "        for i in range(n_iter):\n",
     "            episode_history = game.run_episode(player, return_history = True)\n",
-    "        player.update_q(episode_history)\n",
-    "        "
+    "            player.update_q(episode_history)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "id": "5cc1e56e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1.0, [(((13, 2, False), 0.0, False, {}), None), (((13, 2, False), -1.0, True, {}), 0)])\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 4, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10552/816505195.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtrainer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrainer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcool_player\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m25\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10552/1545119731.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, player, game, n_iter, callback)\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mepisode_history\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_episode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_history\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepisode_history\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m             \u001b[0mplayer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_q\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepisode_history\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10552/1747032724.py\u001b[0m in \u001b[0;36mupdate_q\u001b[1;34m(self, episode_history)\u001b[0m\n\u001b[0;32m     19\u001b[0m             \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepisode_history\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m                 \u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_done\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprev_action\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mepisode_history\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m                 \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgamma\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mg\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprev_action\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 2)"
+     ]
+    }
+   ],
+   "source": [
+    "trainer = Trainer()\n",
+    "trainer.train(cool_player, game, 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d41b7888",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.action_space.n"
+    "cool_player.greedy_step(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3e681b59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(cool_player.q[state])"
    ]
   },
   {
