--- a/blackjack-rl/blackjack-rl.ipynb
+++ b/blackjack-rl/blackjack-rl.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "30876f02-5eb7-4167-9e34-6f245976393e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "acdc37c9-82d1-41af-bca3-d31b604d1318",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "(9, 3, False)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a006c89b-e027-421f-8690-c79658475e40",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "((19, 3, False), 0.0, False, {})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5c54db80-e4c2-46e0-8dfd-31351bc9766f",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "((19, 3, False), 0.0, True, {})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "c36df531-4f4c-4317-b0ba-a3efe66e06d8",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "8bbc5fd1-32c9-446d-8de5-c7b62b6e2034",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "bdd0c141-c992-4573-8b83-0186cea90396",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "1662928d-2c24-4a8d-b23e-4812f079b0da",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "9cfebe44",
    "metadata": {},
    "outputs": [
@@ -396,9 +396,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(((17, 4, True), 0.0, False, {}), None),\n",
-      " (((21, 4, True), 0.0, False, {}), 1),\n",
-      " (((21, 4, True), 1.0, True, {}), 0)]\n"
+      "[(((12, 8, False), 0.0, False, {}), None),\n",
+      " (((21, 8, False), 0.0, False, {}), 1),\n",
+      " (((21, 8, False), 1.0, True, {}), 0)]\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "594311c3-f5e9-45ca-8dfa-d80e0c09698e",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
     "    \n",
     "    def train(self, player, n_iter, use_tqdm=True):\n",
     "        for i in tqdm(range(n_iter), desc=f\"Training {player}\", disable=not use_tqdm):\n",
-    "            reward, episode_history = game.run_episode(player, return_history=True)\n",
+    "            reward, episode_history = self.game.run_episode(player, return_history=True)\n",
     "            player.update_q(episode_history)\n",
     "        \n",
     "    def grid_search_params(self, player, params_grid, n_iter_train=100000,\n",
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "b360403f-c807-4d59-ac89-54854dc399cf",
    "metadata": {},
    "outputs": [],
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "8b9d0493-2222-4e9c-9238-d19e5a6a5400",
    "metadata": {},
    "outputs": [],
@@ -852,14 +852,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "d07eccfd-f948-4e22-a570-dc8cca45116b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f7d2175e75a4dd2a0735d99f3f0503b",
+       "model_id": "44e781ac90e447d4b838fd776074f7cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -871,18 +871,28 @@
      "output_type": "display_data"
     },
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5748/2698853188.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdouble_trainer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTrainer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdouble_game\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdouble_trainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdouble_mc_control_player\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mdouble_game\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmc_check\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdouble_mc_control_player\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5748/2778934936.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, player, n_iter, use_tqdm)\u001b[0m\n\u001b[0;32m     62\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_iter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muse_tqdm\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_iter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdesc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34mf\"Training {player}\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisable\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0muse_tqdm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m             \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepisode_history\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_episode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_history\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m             \u001b[0mplayer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_q\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepisode_history\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5748/3169572482.py\u001b[0m in \u001b[0;36mrun_episode\u001b[1;34m(self, player, return_history)\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;32mwhile\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mepisode_ended\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0maction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplayer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprevious_state\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[0mprevious_state\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m             \u001b[1;33m(\u001b[0m\u001b[0mphand\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdhand\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_usableace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepisode_ended\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprevious_state\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mepisode_history\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprevious_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\projects\\envs\\base_ml_env\\lib\\site-packages\\gym\\envs\\toy_text\\blackjack.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m         \u001b[1;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0maction\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# hit: add a card to players hand and return\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdraw_card\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnp_random\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "249b37825f3a4895a14c603de1c5e07b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checking Player(gamma=1, eps=0.001):   0%|          | 0/100000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-0.1276300000000012"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -911,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "22cadead-ea57-4480-8bb3-3a1493757485",
    "metadata": {},
    "outputs": [],
@@ -921,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "16a5f6e3-fb5f-4ad3-b15f-e38e5d941f80",
    "metadata": {},
    "outputs": [],
@@ -932,25 +942,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "680802bd-51ff-4475-b959-ec44528ff152",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer.train(double_mc_control_player_best_params, 250)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "47651911-df92-4eb3-92cc-86844ab07d7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f781e9c0f464aa891178b5ecea12de6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Collecting plot data:   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "double_mc_control_player_best_params = OffPolicySoftGreedyMCControlPlayer(**grid_search_result['best_params'])\n",
     "double_trainer.plot_learning(double_mc_control_player_best_params,\n",
-    "                      max_iter_train=1000,\n",
-    "                      iter_train_step=200,\n",
-    "                      n_iter_check=1000)"
+    "                      max_iter_train=100000,\n",
+    "                      iter_train_step=2000,\n",
+    "                      n_iter_check=10000)"
    ]
   },
   {
