--- a/tictactoe-rl/tictactoe_q_learning.ipynb
+++ b/tictactoe-rl/tictactoe_q_learning.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tictactoe_env import TicTacToe\n",
     "import numpy as np\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,26 +37,31 @@
     "\n",
     "    def run_episode(self, player_x, player_o):\n",
     "        state, _, is_done, _ = self.env.reset()\n",
-    "        self.env.printBoard()\n",
     "        rewards_x, rewards_o = [], []\n",
+    "        players = [player_x, player_o]\n",
+    "        cur_player = 0\n",
     "        while not is_done:\n",
-    "            step_x = player_x.strategy(state)\n",
-    "            state, reward_x, is_done, _ = self.env.step(step_x)\n",
-    "            step_o = player_o.strategy(state)\n",
-    "            self.env.printBoard()\n",
-    "            state, reward_o, is_done, _ = self.env.step(step_o)\n",
-    "            rewards_x.append(reward_x)\n",
-    "            rewards_o.append(reward_o)\n",
-    "            self.env.printBoard()\n",
-    "            print(reward_x, reward_o)\n",
-    "        return rewards_x, rewards_o\n",
-    "\n",
-    "        "
+    "            step = players[cur_player].strategy(state)\n",
+    "            state, reward, is_done, _ = self.env.step(step)\n",
+    "            if cur_player == 0:\n",
+    "                rewards_x.append(reward)\n",
+    "            else:\n",
+    "                rewards_o.append(-reward)\n",
+    "            # rewards_x.append(reward)\n",
+    "            # rewards_o.append(-reward)\n",
+    "            cur_player = (cur_player + 1) % 2\n",
+    "        if (len(rewards_x) > len(rewards_o)):\n",
+    "            if (rewards_x[-1] == 1):\n",
+    "                rewards_o.append(-1)\n",
+    "            else:\n",
+    "                rewards_o.append(0)\n",
+    "        \n",
+    "        return rewards_x, rewards_o"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,89 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   | o |   | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "0 0\n",
-      "-------------\n",
-      "| x |   |   | \n",
-      "-------------\n",
-      "|   | o |   | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "-------------\n",
-      "| x |   | o | \n",
-      "-------------\n",
-      "|   | o |   | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "0 0\n",
-      "-------------\n",
-      "| x |   | o | \n",
-      "-------------\n",
-      "|   | o | x | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "-------------\n",
-      "| x | o | o | \n",
-      "-------------\n",
-      "|   | o | x | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "0 0\n",
-      "-------------\n",
-      "| x | o | o | \n",
-      "-------------\n",
-      "|   | o | x | \n",
-      "-------------\n",
-      "| x |   | x | \n",
-      "-------------\n",
-      "-------------\n",
-      "| x | o | o | \n",
-      "-------------\n",
-      "|   | o | x | \n",
-      "-------------\n",
-      "| x | o | x | \n",
-      "-------------\n",
-      "0 -1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "([0, 0, 0, 0], [0, 0, 0, -1])"
+       "([0, 0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 0, 0, -1])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +127,7 @@
        " {})"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -238,24 +161,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   | x | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(('211111111',\n",
+       "  array([[0, 1],\n",
+       "         [0, 2],\n",
+       "         [1, 0],\n",
+       "         [1, 1],\n",
+       "         [1, 2],\n",
+       "         [2, 0],\n",
+       "         [2, 1],\n",
+       "         [2, 2]], dtype=int64),\n",
+       "  -1),\n",
+       " 0,\n",
+       " False,\n",
+       " {})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "env.step(np.array([0, 0]))"
+   ]
   },
   {
    "cell_type": "code",
@@ -263,6 +197,61 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "| x |   |   | \n",
+      "-------------\n",
+      "|   |   |   | \n",
+      "-------------\n",
+      "|   |   |   | \n",
+      "-------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.printBoard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('211111111',\n",
+       "  array([[0, 1],\n",
+       "         [0, 2],\n",
+       "         [1, 0],\n",
+       "         [1, 1],\n",
+       "         [1, 2],\n",
+       "         [2, 0],\n",
+       "         [2, 1],\n",
+       "         [2, 2]], dtype=int64),\n",
+       "  -1),\n",
+       " -10,\n",
+       " True,\n",
+       " {})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.step(np.array([0, 0]))"
+   ]
   },
   {
    "cell_type": "code",
